[workspace]
members = [
    "abi",
    "reservation",
    "service",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" ] }
tokio = { version = "1.24.1", features = ["full"] }
